# voice-assistant

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
config/: settings.py  voices.py
core/: conversation.py  llm.py  stt.py  tts.py  tts_base.py  tts_fish.py  tts_manager.py  tts_openai.py  vad.py
scripts/: download_models.py
server/: app.py  modal_deploy.py  session.py
static/: app.js  index.html  style.css
