[project]
name = "voice-conversation"
version = "0.1.0"
description = "Voice conversation app with WhisperX STT, OpenAI LLM, and Kokoro TTS"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.24",
    "soundfile>=0.12",
    "torch>=2.0",
    "openai>=1.30",
    "kokoro-onnx>=0.4",
    "onnxruntime>=1.17",
    "faster-whisper>=1.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "websockets>=12.0",
    "torchaudio>=2.8.0",
]

[project.optional-dependencies]
quality = [
    "whisperx>=3.1",
]
server = [
    "modal>=0.64",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config", "core", "server"]
